--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
     "manifest_version": 3,
     "version": "1.3",
-    "name": "Links saver",
+    "name": "Unit Converter",
     "action": {
         "default_popup": "index.html",
-        "default_icon": "images/save-file.png"
+        "default_icon": "images/repost.png"
     }
 }
